--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 pre {
   color: #a52a2a; /* Цвет */
   font-size: 40pt; /* Размер шрифта в пунктах */
-  font-family: sans-serif; /* Семейство шрифтов */
+  font-family: "bison"; /* Семейство шрифтов */
   font-weight: normal; /* Нормальное начертание текста  */
+  @font-face {
+  font-family: "bison";
+  src: url("../bison.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+  }
