--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ h1 {
   font-size: 40pt; /* Размер шрифта в пунктах */
   font-family: 'Roboto', sans-serif; /* Семейство шрифтов */
   font-weight: normal; /* Нормальное начертание текста  */
-  h1 {
+}
+pre {
     /*color: #a52a2a; /* Цвет */
     font-size: 20pt; /* Размер шрифта в пунктах */
     font-family: 'Roboto', sans-serif; /* Семейство шрифтов */
     font-weight: normal; /* Нормальное начертание текста  */
+}
