--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+﻿@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 h1 {
   color: #a52a2a; /* Цвет */
   font-size: 40pt; /* Размер шрифта в пунктах */
@@ -8,6 +8,12 @@ h1 {
 pre {
     /*color: #a52a2a; /* Цвет */
     font-size: 20pt; /* Размер шрифта в пунктах */
+    font-family: 'Roboto', sans-serif; /* Семейство шрифтов */
+    font-weight: normal; /* Нормальное начертание текста  */
+}
+p {
+    /*color: #931427; /* Цвет */
+    font-size: 120pt; /* Размер шрифта в пунктах */
     font-family: 'Roboto', sans-serif; /* Семейство шрифтов */
     font-weight: normal; /* Нормальное начертание текста  */
 }
