--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ pre {
     font-weight: normal; /* Нормальное начертание текста  */
 }
 p {
-    /*color: #931427; /* Цвет */
+    color: #931427; /* Цвет */
     font-size: 120pt; /* Размер шрифта в пунктах */
     font-family: 'Roboto', sans-serif; /* Семейство шрифтов */
     font-weight: normal; /* Нормальное начертание текста  */
