--- a/css/popupmenu.css
+++ b/css/popupmenu.css
@@ -1,27 +1,25 @@
 .navbarr {
   overflow: hidden;
-  background-color: #44b6b6;
-  font-family: Arial, Helvetica, sans-serif;
-
+  background-color: rgba(0, 0, 0, 0.2);
+  font-family: "Muller",sans-serif;
 }
 
 .login {
   position: absolute;
   right: 0%;
   margin-left: -50px !important;
-  font-size: 16px;
   text-decoration: none;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 8px 16px;
 }
 .navbarr a {
   float: left;
-  font-size: 16px;
+  font-size: 18px;
   text-decoration: none;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 8px 16px;
 }
 
 .navbarr a:hover {
@@ -40,18 +38,18 @@
 
 .dropdownn .dropbtnn {
   cursor: pointer;
-  font-size: 16px;
+  font-size: 18px;
   border: none;
   outline: none;
   color: white;
-  padding: 14px 16px;
+  padding: 8px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
 }
 
 .navbarr a:hover, .dropdownn:hover .dropbtnn, .dropbtnn:focus {
-  background-color:  #338b8b;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
 
 .dropdownn-content {
@@ -66,7 +64,7 @@
 .dropdownn-content a {
   float: none;
   color: black;
-  padding: 12px 16px;
+  padding: 8px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
@@ -75,15 +73,34 @@
 .dropdownn-content a:hover {
   background-color: #b4b4b4;
 }
+@keyframes shadow {
+from {text-shadow: 0 0 3px white;}
+50% {text-shadow: 0 0 30px white;}
+to {text-shadow: 0 0 3px white;}
+}
 
 .logo {
   position: absolute;
     left: 50%;
-    margin-left: -50px !important;
+    margin-left: -60px !important;
 	font-family: 'Cinzel Decorative', cursive;
 	color: white;
 	font-size:30px;
+  user-select: none;
 }
+
+.logo:hover{
+  animation: shadow 1s ease-in-out 0.5s alternate, move 5s linear 2s;
+
+}
+
+.box1{
+  background-image: url(img/background1.png);
+  background-size: 100% auto;
+  width: 100%;
+  height: 800px;
+}
+
 .show {
   display: block;
 }
