--- a/css/popupmenu.css
+++ b/css/popupmenu.css
@@ -97,8 +97,25 @@ to {text-shadow: 0 0 3px white;}
 .box1{
   background-image: url(img/background1.png);
   background-size: 100% auto;
+  background-attachment: fixed;
   width: 100%;
-  height: 800px;
+}
+.welcometext{
+  margin-left: auto;
+    margin-right: auto;
+    margin-top: 15%;
+    padding-bottom: 15%;
+       width: 50%;
+}
+.box1 h3{
+  font-family: 'Caveat', cursive;
+  color: white;
+  text-align: center;
+  background: rgba(8, 8, 8, 0.4); /* Цвет фона */
+  padding: 50px; /* Поля вокруг текста */
+  border-radius: 5px; /* Уголки */
+
+
 }
 
 .show {
