--- a/css/popupmenu.css
+++ b/css/popupmenu.css
@@ -6,6 +6,7 @@
   overflow: hidden;
   background-color: #ffffff;
   width: 90%;
+  min-width: 90%;
   position: fixed;
 }
 #navbar{
@@ -18,7 +19,7 @@ margin-top: -0.55%;
 #tmenu{
   margin-left: 4%;
   width: 90%;
-  height: 300px;
+  height: 100%;
   border:  2px solid #3498db;
   position:fixed;
 }
@@ -50,6 +51,7 @@ color: #176fa7;
 */
 body {
   margin: 0;
+
 }
 
 #leftmenu ul {
@@ -57,6 +59,7 @@ body {
   margin: 0;
   padding: 0;
   width: 10%;
+  min-width: 10%;
   background-color: #176fa7;
   position: fixed;
   height: 100%;
@@ -110,10 +113,7 @@ td {
   border-right: 1px dashed #6cf;
   padding: 10px 20px;
 }
-#t2menu{
-  margin-top: 300px;
-  margin-left: 9.8%;
-}
+
 .tags a {
   display: inline-block;
   height: 21px;
